--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:#efefef ;
+  /* background-color:#efefef ; */
+  background-color: #F3EBE9;
+  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root{
+  display: flex;
+  justify-content: center;
+  padding:0px 100px;
 }
